# wo_exchange_platform

./: .gitignore  CMakeLists.txt  README.md  Readme.md
WO_exchange_platform/exchange_platform/files/: order.txt  user.txt
WO_exchange_platform/exchange_platform/platform/: Admins.cpp  Admins.h  wo_exchange.cpp  wo_exchange.h
WO_exchange_platform/exchange_platform/run/: run_exchange_platform.cpp
files/: commands.txt  commodity.txt  order.txt  recharge.txt  user.txt
platform/: Admins.cpp  Admins.h  Goods.cpp  Goods.h  Orders.cpp  Orders.h  Users.cpp  Users.h  calculator.cpp  calculator.h  wo_exchange.cpp  wo_exchange.h
